# quantum-nn-pennylane

./: .gitignore  CustomNetworks.py  QuantumCircuitNetwork.py  QuantumNN.py  README.md  analysis.ipynb  bin_analysis.ipynb  installations.ipynb  pyproject.toml  run10ClassesExperiment.ipynb  runBinExperiment.ipynb  runBinExperiment_LORENZ.ipynb  runExperiment.ipynb  setup.py  testModel.ipynb  utils.py  visCircuits.ipynb
QCircNet/: BinaryQuantumNN.py  CustomNetworks.py  QuantumCircuitNetwork.py  QuantumNN.py  Senokosov2024QuantumNN.py  utils.py
QCircNet/circuits/: CustomCircuits.py  QuantumCircuit.py
data/: X_apd_class6_7.npy  data_preperation.ipynb  images_resize_class1_6.npy  test_X.npy  test_y.npy  train_y.npy  y_apd_class6_7.npy
results/: bin_model_results_expID_0.csv  bin_model_results_expID_1.csv  final_bin_model_results_expID_0.csv  model_10_results_expID_69.csv  model_results_expID_0.csv  model_results_expID_1.csv  model_results_expID_69.csv  old_bin_experiment.csv  vis_bin_model_results.csv
results/models/: Ranga2024Circuit_expID_69_dfID_1.pth  Senokosov2024Circuit_expID_69_dfID_0.pth  Senokosov2024Circuit_expID_69_dfID_1.pth  model_expID_1_dfID_0.pth  model_expID_1_dfID_1.pth  model_expID_1_dfID_10.pth  model_expID_1_dfID_11.pth  model_expID_1_dfID_12.pth  model_expID_1_dfID_13.pth  model_expID_1_dfID_14.pth  model_expID_1_dfID_15.pth  model_expID_1_dfID_16.pth  model_expID_1_dfID_17.pth  model_expID_1_dfID_18.pth  model_expID_1_dfID_19.pth  model_expID_1_dfID_2.pth  model_expID_1_dfID_20.pth  model_expID_1_dfID_21.pth  model_expID_1_dfID_22.pth  (+64 more)
(+38 files in other folders)
